# smart_factory_prbt_2021

./: README.md
pilz_robots/prbt_hardware_support/config/: modbus_read_api_spec_pss4000.yaml
pilz_robots/prbt_hardware_support/launch/: modbus_client.launch
pilz_robots/prbt_support/config/: manipulator_controller.yaml
smart_factory/: CMakeLists.txt  package.xml  setup.py
smart_factory/config/: prbt.srdf.xacro
smart_factory/launch/: smart_factory.launch  smf_application.launch  smf_prbt.launch
smart_factory/msg/: AgvToSmfStatus.msg  SmfToAgvStatus.msg
smart_factory/scripts/: camera_calibration.py  get_box_pose.py  get_pen_pose.py  image_processing_node.py  modbus_server.py  modbus_wrapper_server.py  pick_hsv.py  post_threading.py  smart_factory_application.py  smf_tcp_server.py  take_picture.py
smart_factory/srv/: GetBoxPenCenter.srv
smart_factory/urdf/: smart_factory.xacro
smart_factory/urdf/meshes/: robot_table.stl
