<?xml version="1.0"?>
<package format="2">
  <name>smart_factory</name>
  <version>1.0.0</version>
  <description>ROS package for smart factory V1.0</description>
  
  <maintainer email="zy.yin@pilz.com.cn">Pilz China</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_robots</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>pilz_robot_programming</exec_depend>
  <exec_depend>prbt_moveit_config</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
